# CppLess

./: .pre-commit-config.yaml  CMakeLists.txt
Cmake/: Utils.cmake
Vasiliev-6_edition/: CMakeLists.txt
Vasiliev-6_edition/Chapter_1/: CMakeLists.txt
Vasiliev-6_edition/Chapter_11/: CMakeLists.txt
Vasiliev-6_edition/Chapter_11/Task_1/Lib/ComplexDervid/: CMakeLists.txt
Vasiliev-6_edition/Chapter_11/Task_1/Lib/ComplexDervid/Inc/: ComplexDervid.h
Vasiliev-6_edition/Chapter_11/Task_1/Lib/ComplexDervid/Src/: ComplexDervid.cpp
Vasiliev-6_edition/Chapter_12/: CMakeLists.txt
Vasiliev-6_edition/Chapter_2/: CMakeLists.txt
Vasiliev-6_edition/Chapter_3/: CMakeLists.txt
Vasiliev-6_edition/Chapter_4/: CMakeLists.txt
Vasiliev-6_edition/Chapter_5/: CMakeLists.txt
Vasiliev-6_edition/Chapter_6/: CMakeLists.txt
Vasiliev-6_edition/Chapter_6/Task_13/: CMakeLists.txt  task.md
Vasiliev-6_edition/Chapter_6/Task_13/AppMain/: Main.cpp
Vasiliev-6_edition/Chapter_6/Task_13/Lib/: CMakeLists.txt
Vasiliev-6_edition/Chapter_6/Task_13/Lib/AlgebraicForm/: CMakeLists.txt
Vasiliev-6_edition/Chapter_6/Task_13/Lib/AlgebraicForm/Inc/: ComplexAlg.h
Vasiliev-6_edition/Chapter_6/Task_13/Lib/AlgebraicForm/Src/: ComplexAlg.cpp
Vasiliev-6_edition/Chapter_6/Task_13/Lib/TrigonometricForm/: CMakeLists.txt
Vasiliev-6_edition/Chapter_6/Task_13/Lib/TrigonometricForm/Inc/: ComplexTrig.h
Vasiliev-6_edition/Chapter_6/Task_13/Lib/TrigonometricForm/Src/: ComplexTrig.cpp
Vasiliev-6_edition/Chapter_7/: CMakeLists.txt
Vasiliev-6_edition/Chapter_8/: CMakeLists.txt
(+64 files in other folders)
